Fix mobile view issue: list item could not fit on screen

--- a/src/app/item-list/item-list.component.scss
+++ b/src/app/item-list/item-list.component.scss
@@ -10,7 +10,7 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
-    width: 400px;
+    max-width: 400px;
     margin: 4px;
 
     img {
